Added Info; Added Some Links for Footer

--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -67,19 +67,19 @@
 
     </body>
 
-    <footer class="footer-clean">
+    <footer>
         <div class="container">
             <h3>Explore</h3>
-            <a href="#">Home</a>
-            <a href="#">Basic Knowledge</a>
-            <a href="#">Agents</a>
-            <a href="#">Maps</a>
-            <a href="#">Patch Notes</a>
+            <a href="ValorantBasic.html">Home</a>
+            <a href="Basic_Information.html">Basic Knowledge</a>
+            <a href="Agent_Tips.html">Agents</a>
+            <a href="Maps.html">Maps</a>
+            <a href="Patch_Notes.html">Patch Notes</a>
         </div>
         <div class="container">
             <h3>Resources</h3>
-            <a href="#">Valorant</a>
-            <a href="#">Youtube</a>
+            <a href="playvalorant.com">Valorant</a>
+            <a href="youtube.com/search?=valorant">Youtube</a>
             <a href="#">Facebook</a>
         </div>
         <div class="container">
