--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -38,7 +38,7 @@
 
             <h1 class="titles" id="Homepage">Introductions</h1>
             <hr class="titles">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>Valorant is a 5v5 tactical first person shooter set in the near future where each player plays as a character called an “Agent”. Players play as one of a set of Agents, characters designed based on several countries and cultures around the world. In the main game mode, players are assigned to either the attacking or defending team with each team having five players on it. </p>
             <button class="transfer"><a href="playvalorant.com">Download</a></button>
         </div>
         <!--Basic Knowledge Section-->
@@ -47,7 +47,7 @@
 
             <h1 class="titles" id="Bacic_Knowledge">Basic Knowledge</h1>
             <hr class="titles">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>The game is based on sharp gunplay and the tactical abilities and with one life per-round. All players will start with 100 health and they can increase their health by buying either light shields and heavy shields. There are 2 main game modes, unrated and competitive, in both gamemodes, the players play as a set of agents and the first team to reach 13 points to win, but competitive has an overtime mechanic where a team must at least have a 2 point difference in the score. Spike rush and deathmatch are the 2 extra game modes. In Spike Rush, the players play as a set of agents and the first team to reach 4 points is the winner, but every round the same weapon is picked for every player in the lobby with ability orbs that gives special effects when claimed such as, Damage Amp, Health Regen, Tracer Rounds, Crippling Decay, Ultimate Ability, Combat Stim, Golden Gun, Paranoia, Weapon Upgrade and Twin Hunters. In Deathmatch, there will be a total of 12 players that will spawn with 100 health and heavy shields and random agents with abilities turned off in different places in a map and will have to kill each other until they get 40 kills or until the time runs out.</p>
         </div>
         <!--Agent Tips Section-->
         <div class="homebg">
@@ -55,7 +55,7 @@
 
             <h1 class="titles" id="Agent_Tips">Agent Tips</h1>
             <hr class="titles">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>There are currently eighteen agents in the game which are Astra, Breach, Brimstone, Chamber, Cypher, Jett, Kay/O, Killjoy, Neon, Omen, Phoenix, Raze, Reyna, Sage, Skye, Sova, Viper, and Yoru. Each agent has four unique abilities, including one ultimate. So far, the agent abilities range from traditional utilities from realistic shooters such as flashbangs and smoke grenades but also include magical themed abilities like bringing up flame walls and bounceable arrows that can act like a radar.</p>
         </div>
         <!--Maps Section-->
         <div class="homebg">
@@ -81,16 +81,16 @@
     <footer>
         <div class="container">
             <h3>Explore</h3>
-            <a href="#">Home</a>
-            <a href="#">Basic Knowledge</a>
-            <a href="#">Agents</a>
-            <a href="#">Maps</a>
-            <a href="#">Patch Notes</a>
+            <a href="ValorantBasic.html">Home</a>
+            <a href="Basic_Information.html">Basic Knowledge</a>
+            <a href="Agent_Tips.html">Agents</a>
+            <a href="Maps.html">Maps</a>
+            <a href="Patch_Notes.html">Patch Notes</a>
         </div>
         <div class="container">
             <h3>Resources</h3>
-            <a href="#">Valorant</a>
-            <a href="#">Youtube</a>
+            <a href="playvalorant.com">Valorant</a>
+            <a href="youtube.com/search?=valorant">Youtube</a>
             <a href="#">Facebook</a>
         </div>
         <div class="container">
