Dynamic-Button Anchor Jumps

--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -66,6 +66,10 @@
         <div>
             <h1 class="titles" id="Duelist">Duelist</h1>
             <p>Self sufficient fraggers who their team expects through abilities and skills to open sites, get high frags and rush into fights.</p>
+            <div class="Agent" id="idk">
+                <img>
+                <p></p>
+            </div>
         </div>
 
         <!-- Sentinal Section -->
@@ -73,13 +77,21 @@
         <div>
             <h1 class="titles" id="Sentinal">Sentinal</h1>
             <p>Defensive experts who can lock down areas and watch flanks both on attacker and defender round.</p>
+            <div class="Agent" id="idk">
+                <img>
+                <p></p>
+            </div>
         </div>
 
         <!-- Controller Section -->
         <hr style="width: 70%; border-top: 3px solid;">
         <div>
             <h1 class="titles" id="Controller">Controller</h1>
-            <p>Slicing up dangerous territory to set their team up for success. This usually comes in the form of smokes, which can be used to offensively or defensively block off a target’s vision but also slows, stuns, and in some cases, flashes.</p>
+            <p>Slicing up dangerous territory to set their team up for success. This usually comes in the form of smokes, which can be used to offensively or defensively block off a target's vision but also slows, stuns, and in some cases, flashes.</p>
+            <div class="Agent" id="idk">
+                <img>
+                <p></p>
+            </div>
         </div>
         
         <!-- Initiator Section -->
@@ -87,10 +99,16 @@
         <div id="Initiator">
             <h1 class="titles">Initiator</h1>
             <p>Challenge angles by setting up their team to enter contested ground and push defenders away. These agents often excel on the offensive, setting up their teammates for success. </p>
+            <div class="Agent" id="idk">
+                <img>
+                <p></p>
+            </div>
         </div>
     </body>
-
-    
+    <div class="move">
+        <button id="prev"><a href="#Duelist">Duelist</a></button>
+        <button id="next"><a href="#Sentinal">Sentinal</a></button>        
+    </div>
     <footer>
         <div class="container">
             <h3>Explore</h3>
