--- a/Maps.html
+++ b/Maps.html
@@ -38,31 +38,31 @@
 
         <div class="mapBase">
             <div class="map">
-                <img src="Assets/bg/Ascent_Map.png" alt="ASCENT">
+                <img src="Assets/map/Ascent.png" alt="ASCENT">
                 <h5>ASCENT</h5>
             </div>
             <div class="map">
-                <img src="Assets/bg/Ascent_Map.png" alt="BIND">
+                <img src="Assets/map/Bind.jpg" alt="BIND">
                 <h5>BIND</h5>
             </div>
             <div class="map">
-                <img src="Assets/bg/Ascent_Map.png" alt="BREEZE">
+                <img src="Assets/map/Breeze.jpg" alt="BREEZE">
                 <h5>BREEZE</h5>
             </div>
             <div class="map">
-                <img src="Assets/bg/Ascent_Map.png" alt="FRACTURE">
+                <img src="Assets/Map/Fracture.jpg" alt="FRACTURE">
                 <h5>FRACTURE</h5>
             </div>
             <div class="map">
-                <img src="Assets/bg/Ascent_Map.png" alt="HAVEN">
+                <img src="Assets/Map/Haven.jpg" alt="HAVEN">
                 <h5>HAVEN</h5>
             </div>
             <div class="map">
-                <img src="Assets/bg/Ascent_Map.png" alt="ICEBOX">
+                <img src="Assets/Map/Icebox.jpg" alt="ICEBOX">
                 <h5>ICEBOX</h5>
             </div>
             <div class="map">
-                <img src="Assets/bg/Ascent_Map.png" alt="SPLIT">
+                <img src="Assets/Map/Split.jpg" alt="SPLIT">
                 <h5>SPLIT</h5>
             </div>
         </div>
