Fixed Agent Anchor Jump and Format; Add Anchor Map

--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
     <head>
         <title>Valorant Basic</title>
@@ -67,7 +69,7 @@
         <div>
             <h1 class="titles" id="Duelist">Duelist</h1>
             <p>Self sufficient fraggers who their team expects through abilities and skills to open sites, get high frags and rush into fights.</p>
-            <div class="Agent" id="Duelist">
+            <div class="Agent">
                 <table>
                     <tr class="Arsenal">
                         <td onclick="contentChange(0)">
@@ -127,7 +129,7 @@
         <div>
             <h1 class="titles" id="Sentinel">Sentinel</h1>
             <p>Defensive experts who can lock down areas and watch flanks both on attacker and defender round.</p>
-            <div class="Agent" id="Sentinel">
+            <div class="Agent">
                 <table>
                     <tr class="Arsenal">
                         <td onclick="contentChange(6)">
@@ -170,7 +172,7 @@
         <div>
             <h1 class="titles" id="Controller">Controller</h1>
             <p>Slicing up dangerous territory to set their team up for success. This usually comes in the form of smokes, which can be used to offensively or defensively block off a target's vision but also slows, stuns, and in some cases, flashes.</p>
-            <div class="Agent" id="idk">
+            <div class="Agent">
                 <table>
                     <tr class="Arsenal">
                         <td onclick="contentChange(10)">
@@ -210,10 +212,10 @@
         
         <!-- Initiator Section -->
         <hr style="width: 70%; border-top: 3px solid;">
-        <div id="Initiator">
-            <h1 class="titles">Initiator</h1>
+        <div>
+            <h1 class="titles"  id="Initiator">Initiator</h1>
             <p>Challenge angles by setting up their team to enter contested ground and push defenders away. These agents often excel on the offensive, setting up their teammates for success. </p>
-            <div class="Agent" id="idk">
+            <div class="Agent">
                 <table>
                     <tr class="Arsenal">
                         <td onclick="contentChange(14)">
