--- a/Maps.html
+++ b/Maps.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 
 <html>
     <head>
@@ -38,78 +39,80 @@
 
         <div class="mapBase">
             <div class="map">
-                <img src="Assets/map/Ascent.png" alt="ASCENT">
-                <h5>ASCENT</h5>
+                <a href="#Ascent">
+                    <img src="Assets/map/Ascent.png" alt="ASCENT">
+                    <h5>ASCENT</h5>
+                </a>
             </div>
             <div class="map">
-                <img src="Assets/map/Bind.jpg" alt="BIND">
-                <h5>BIND</h5>
+                <a href="#Bind">
+                    <img src="Assets/map/Bind.jpg" alt="BIND">
+                    <h5>BIND</h5>
+                </a>
             </div>
             <div class="map">
-                <img src="Assets/map/Breeze.jpg" alt="BREEZE">
-                <h5>BREEZE</h5>
+                <a href="#Breeze">
+                    <img src="Assets/map/Breeze.jpg" alt="BREEZE">
+                    <h5>BREEZE</h5>
+                </a>
             </div>
             <div class="map">
-                <img src="Assets/Map/Fracture.jpg" alt="FRACTURE">
-                <h5>FRACTURE</h5>
+                <a href="#Fracture">
+                    <img src="Assets/Map/Fracture.jpg" alt="FRACTURE">
+                    <h5>FRACTURE</h5>
+                </a>
             </div>
             <div class="map">
-                <img src="Assets/Map/Haven.jpg" alt="HAVEN">
-                <h5>HAVEN</h5>
+                <a href="#Haven">
+                    <img src="Assets/Map/Haven.jpg" alt="HAVEN">
+                    <h5>HAVEN</h5>
+                </a>
             </div>
             <div class="map">
-                <img src="Assets/Map/Icebox.jpg" alt="ICEBOX">
-                <h5>ICEBOX</h5>
+                <a href="#Icebox">
+                    <img src="Assets/Map/Icebox.jpg" alt="ICEBOX">
+                    <h5>ICEBOX</h5>
+                </a>
             </div>
             <div class="map">
-                <img src="Assets/Map/Split.jpg" alt="SPLIT">
-                <h5>SPLIT</h5>
+                <a href="#Split">
+                    <img src="Assets/Map/Split.jpg" alt="SPLIT">
+                    <h5>SPLIT</h5>
+                </a>
             </div>
         </div>
         <div class="consecutiveMaps">
-            <div class="mapContainer" style="background: url(Assets/bg/);"> <!--Map is not visual but layout-->
-                <div class="mapContent">
-                    <h5>Haven</h5>
-                    <p>Haven's unique mechanic is the fact that it has 3 bomb sites compared to the other maps which all have only 2. Compared to the other maps, it's a little on the larger side and requires more controlled defense to protect all 3 sites.</p>
-                </div>
+            <div class="mapContainer" id="Ascent">
+                <h5>Ascent</h5>
+                <p>Ascent was the first map released after Valorant's beta, dropping as part of the game's official launch. With a wide-open space down mid, the Italian map features sliding, destructible doors that can cut off rotations.</p>
+                <p>It's one of the most mid-dominant maps, with maintaining control being key to success for both sides as it allows for easy rotations from site-to-site.</p>
+                <p>There are lockable, armored doors to cut off major choke points into breaching a site. They can only be locked and unlocked from the inside and must otherwise be destroyed to regain access to the entranceways they block.</p>
             </div>
-            <div class="mapContainer">
-                <div class="mapContent">
-                    <h5>Bind</h5>
-                    <p>Bind, set in the dusty Morocco, features teleporters that allow players to easily rotate from A to B, and vice versa. However, these teleporters are only one way ⁠— and spit you out in the same locations ⁠— making them prime spots for easy picks, or easy baits.</p>
-                    <p>There's also no “middle”, with the teleporter between A and B taking up that chunk of the map. This forces attackers to push through either A or B Short, and then make a long rotate (with or without teleports) if they decide to switch things up.</p>
-                </div>
+            <div class="mapContainer" id="Bind">
+                <h5>Bind</h5>
+                <p>Bind, set in the dusty Morocco, features teleporters that allow players to easily rotate from A to B, and vice versa. However, these teleporters are only one way ⁠— and spit you out in the same locations ⁠— making them prime spots for easy picks, or easy baits.</p>
+                <p>There's also no “middle”, with the teleporter between A and B taking up that chunk of the map. This forces attackers to push through either A or B Short, and then make a long rotate (with or without teleports) if they decide to switch things up.</p>
             </div>
-            <div class="mapContainer">
-                <div class="mapContent">
-                    <h5>Split</h5>
-                    <p>Set at a Tokyo high-speed railway station, Split features plenty of verticality and ziplines that make it a nightmare for attackers to push onto either site. It is one of Valorant's most one-sided maps, heavily favoring the defense.</p>
-                    <p>There are plenty of small choke points around the map, making explosive utility like Raze's grenades or Viper's Snakebites very powerful tools.</p>
-                </div>
+            <div class="mapContainer" id="Breeze">
+                <h5>Breeze</h5>
+                <p>Breeze is set on a remote island distinguished by its bright, playful, and colorful environment, with wide open spaces and opportunities for long range encounters. Take in the sights of historic ruins or seaside caves on this tropical paradise. But bring some cover. You'll need them for the wide open spaces and long range engagements.</p>
             </div>
-            <div class="mapContainer">
-                <div class="mapContent">
-                    <h5>Ascent</h5>
-                    <p>Ascent was the first map released after Valorant's beta, dropping as part of the game's official launch. With a wide-open space down mid, the Italian map features sliding, destructible doors that can cut off rotations.</p>
-                    <p>It's one of the most mid-dominant maps, with maintaining control being key to success for both sides as it allows for easy rotations from site-to-site.</p>
-                    <p>There are lockable, armored doors to cut off major choke points into breaching a site. They can only be locked and unlocked from the inside and must otherwise be destroyed to regain access to the entranceways they block.</p>
-                </div>
+            <div class="mapContainer" id="Fracture">
+                <h5>Fracture</h5>
+                <p>Fracture is a top-secret experiment site split apart by a radianite-fueled disaster. In its simplest form, the map is marked by its H-shape layout with a visual split down the middle that reveals contrasting sides. Long zip lines also connect routes underneath. </p>
             </div>
-            <div class="mapContainer">
-                <div class="mapContent">
-                    <h5>Icebox</h5>
-                    <p>Your next battleground is a secret Kingdom excavation site overtaken by the arctic. The two plant sites protected by snow and metal require some horizontal finesse. Take advantage of the ziplines and they'll never see you coming.</p>
-                </div>
-            </div><div class="mapContainer">
-                <div class="mapContent">
-                    <h5>Breeze</h5>
-                    <p>Breeze is set on a remote island distinguished by its bright, playful, and colorful environment, with wide open spaces and opportunities for long range encounters. Take in the sights of historic ruins or seaside caves on this tropical paradise. But bring some cover. You'll need them for the wide open spaces and long range engagements.</p>
-                </div>
-            </div><div class="mapContainer">
-                <div class="mapContent">
-                    <h5>Fracture</h5>
-                    <p>Fracture is a top-secret experiment site split apart by a radianite-fueled disaster. In its simplest form, the map is marked by its H-shape layout with a visual split down the middle that reveals contrasting sides. Long zip lines also connect routes underneath. </p>
-                </div>
+            <div class="mapContainer" id="Haven">
+                <h5>Haven</h5>
+                <p>Haven's unique mechanic is the fact that it has 3 bomb sites compared to the other maps which all have only 2. Compared to the other maps, it's a little on the larger side and requires more controlled defense to protect all 3 sites.</p>
+            </div>
+            <div class="mapContainer" id="Icebox">
+                <h5>Icebox</h5>
+                <p>Your next battleground is a secret Kingdom excavation site overtaken by the arctic. The two plant sites protected by snow and metal require some horizontal finesse. Take advantage of the ziplines and they'll never see you coming.</p>
+            </div>
+            <div class="mapContainer" id="Split">
+                <h5>Split</h5>
+                <p>Set at a Tokyo high-speed railway station, Split features plenty of verticality and ziplines that make it a nightmare for attackers to push onto either site. It is one of Valorant's most one-sided maps, heavily favoring the defense.</p>
+                <p>There are plenty of small choke points around the map, making explosive utility like Raze's grenades or Viper's Snakebites very powerful tools.</p>
             </div>
         </div>
         <a href="Basic_Information.html#Match_Up">Match Up</a>
