Footer YT link; Agent Content Popup

--- a/ValorantBasic.html
+++ b/ValorantBasic.html
@@ -100,7 +100,7 @@
         <div class="container">
             <h3>Resources</h3>
             <a href="playvalorant.com">Valorant</a>
-            <a href="youtube.com/search?=valorant">Youtube</a>
+            <a href="https://www.youtube.com/channel/UC8CX0LD98EDXl4UYX1MDCXg">Youtube</a>
             <a href="#">Facebook</a>
         </div>
         <div class="container">
