--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -254,7 +254,11 @@
             </div>
         </div>
     
+        <div class="agentContent" id="Agent">
+            <h1>Agent</h1>
+        </div>
     </body>
+    
 
     <div class="move">
         <button id="prev"><a href="#Duelist">Duelist</a></button>
@@ -272,7 +276,7 @@
         <div class="container">
             <h3>Resources</h3>
             <a href="playvalorant.com">Valorant</a>
-            <a href="youtube.com/search?=valorant">Youtube</a>
+            <a href="https://www.youtube.com/channel/UC8CX0LD98EDXl4UYX1MDCXg">Youtube</a>
             <a href="#">Facebook</a>
         </div>
         <div class="container">
