--- a/Agent_Tips.html
+++ b/Agent_Tips.html
@@ -255,6 +255,7 @@
         </div>
     
         <div class="agentContent" id="Agent">
+            <button class="close" onclick="addOrRemoveContent('Agent')">X</button>
             <h1>Agent</h1>
         </div>
     </body>
