--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -81,7 +81,11 @@
 
             <button class="Show" onclick="Show(1)">Patch Note 4.03</button>
             <div class="PN_Content">
-                <p>MODE FAKA</p>
+                <p>Agent Updates</p>
+                <p>BRIMSTONE</p>
+                <p>Brimstone's ultimate now properly blocks gameplay visibility while active
+                    You'll no longer see enemies on the minimap through the ultimate.
+                    Abilities that require line of sight (flashes, Sova recon pulses) will no longer apply through the ultimate</p>
             </div>
 
             <button class="Show" onclick="Show(2)">Patch Note 4.02</button>
