--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -74,12 +74,19 @@
         
 
         <div class="Patch_Notes">
-            <button class="Show" onclick="Show(0)">Patch Note 4.04</button>
+            <button class="Show" onclick="Show(0)">Patch Note 4.07</button>
             <div class="PN_Content">
-                <p>MODE FAKA</p>
+                <p>SERVER UPDATES</p>
+                <p>Added a new set of servers in Latin America, which should help with latency in that region
+                    Scheduled to turn on not long after 4.07 is live!</p>
+                    <p>WEAPON UPDATES</p>
+                    <p> Bulldog and Stinger now delay firing inputs while bringing up the weapon to aim down sights (ADS)
+                        Prevents you from getting burst mode accuracy improvements before they finish raising your weapon.
+                        Adds a slight cost to the decision to switch to burst firing mid-combat.
+                        You can still begin firing immediately while switching back to full auto/hip fire mode.</p>
             </div>
 
-            <button class="Show" onclick="Show(1)">Patch Note 4.03</button>
+            <button class="Show" onclick="Show(1)">Patch Note 4.06</button>
             <div class="PN_Content">
                 <p>Agent Updates</p>
                 <p>BRIMSTONE</p>
@@ -88,7 +95,7 @@
                     Abilities that require line of sight (flashes, Sova recon pulses) will no longer apply through the ultimate</p>
             </div>
 
-            <button class="Show" onclick="Show(2)">Patch Note 4.02</button>
+            <button class="Show" onclick="Show(2)">Patch Note 4.05</button>
             <div class="PN_Content">
                 <p>MODE FAKA</p>
             </div>
