--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -84,6 +84,10 @@
                         Prevents you from getting burst mode accuracy improvements before they finish raising your weapon.
                         Adds a slight cost to the decision to switch to burst firing mid-combat.
                         You can still begin firing immediately while switching back to full auto/hip fire mode.</p>
+                        <p>AGENT UPDATES</p>
+                        <p>The VALORANT Agents have been busy with a pretty frightening problem. Explore around the Shooting Range to find out what they're up to.</p>
+                        <p>STORE UPDATES</p>
+                        <p>Load times for the VP purchase page should now load in a matter of seconds (previously, it would take more than thirty seconds in some instances)</p>
             </div>
 
             <button class="Show" onclick="Show(1)">Patch Note 4.06</button>
