--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -88,6 +88,9 @@
                         <p>The VALORANT Agents have been busy with a pretty frightening problem. Explore around the Shooting Range to find out what they're up to.</p>
                         <p>STORE UPDATES</p>
                         <p>Load times for the VP purchase page should now load in a matter of seconds (previously, it would take more than thirty seconds in some instances)</p>
+                        <p>SOCIAL UPDATES</p>
+                        <p>Added new detections for different AFK-like behaviors in rotating game modes
+                            Friendly reminder that discriminatory behavior is not tolerated in VALORANT, and if brought to our attention, we will be reviewing the incidents on a case by case basis and determining an appropriate punishment accordingly. We will also be updating our Code of Conduct to be more specific and avoid any misinterpretation. —S&PD Team</p>
             </div>
 
             <button class="Show" onclick="Show(1)">Patch Note 4.06</button>
