--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -93,18 +93,22 @@
                             Friendly reminder that discriminatory behavior is not tolerated in VALORANT, and if brought to our attention, we will be reviewing the incidents on a case by case basis and determining an appropriate punishment accordingly. We will also be updating our Code of Conduct to be more specific and avoid any misinterpretation. —S&PD Team</p>
             </div>
 
-            <button class="Show" onclick="Show(1)">Patch Note 4.06</button>
+            <button class="Show" onclick="Show(1)">Patch Note 4.05</button>
             <div class="PN_Content">
                 <p>Agent Updates</p>
                 <p>BRIMSTONE</p>
-                <p>Brimstone's ultimate now properly blocks gameplay visibility while active
-                    You'll no longer see enemies on the minimap through the ultimate.
-                    Abilities that require line of sight (flashes, Sova recon pulses) will no longer apply through the ultimate</p>
+                <p>Some call him “Brimmy with the stimmy.” And while it’s been exciting to see you all leverage Brimstone’s recent Stim Beacon balance in fresh ways, we think having two stims reduced the importance of deploying it at the right moment. The changes below are our attempt to address this while still retaining Brimstone’s refined identity as a “bursty” excellence of execution.</p>
+                <p>Stim Beacon</p>
+                <p> Charges reduced 2 >>> 1
+                    Cost increased 100 >>> 200
+                </p>
             </div>
 
-            <button class="Show" onclick="Show(2)">Patch Note 4.05</button>
+            <button class="Show" onclick="Show(2)">Patch Note 4.04</button>
             <div class="PN_Content">
-                <p>MODE FAKA</p>
+                <p>Agent Updates</p>
+                <p></p>
+                </p>
             </div>
         </div>
 
