--- a/Patch_Notes.html
+++ b/Patch_Notes.html
@@ -91,6 +91,18 @@
                         <p>SOCIAL UPDATES</p>
                         <p>Added new detections for different AFK-like behaviors in rotating game modes
                             Friendly reminder that discriminatory behavior is not tolerated in VALORANT, and if brought to our attention, we will be reviewing the incidents on a case by case basis and determining an appropriate punishment accordingly. We will also be updating our Code of Conduct to be more specific and avoid any misinterpretation. —S&PD Team</p>
+                            <p>BUGS</p>
+                            <p>AGENTS</p>
+                            <p>Fixed a bug where Yoru could use a weapon immediately at the end of his ultimate by exploiting an unwanted interaction with ropes
+                                Fixed a bug where it was possible to defuse the Spike while channeling abilities
+                                Skye’s Seekers can once again break through the destructible doors on Ascent</p>
+                            <p>SOCIAL</p>
+                            <p>Fixed a bug where comms-restricted players could not listen to team voice chat
+                                Fixed a bug where players were not always immediately removed from the game after being banned</p>
+                            <p>COMPETITIVE</p>
+                            <p>Fixed a bug that was causing performance bonuses to show at incorrect times</p>
+                            <p>GAMEPLAY SYSTEMS</p>
+                            <p>Fixed an issue where briefly tapping the “Use Spike” button to plant the Spike could cause you to end up holding the Spike instead of your last equipped weapon</p>
             </div>
 
             <button class="Show" onclick="Show(1)">Patch Note 4.06</button>
